figured out content sizing

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html * {max-height:1000000px;} /* hack to disable font boosting*/
 
-body { background: black; margin-left: 5%; margin-right: 5%; line-height: 1.5 }
+body { background: black; margin-left: 5%; line-height: 1.5 }
 h2 { font-family: Arial, sans-serif; color: lightgray; }
 
 nav { font-family: "Courier New", monospace; color: dimgray;  }
@@ -9,7 +9,7 @@ a:visited { color: darkgray; text-decoration: none; }
 a:hover { color: lightgray; text-decoration: none; }
 a:active { color: lightgray; text-decoration: none; }
 
-#article_text { font-family: Arial, sans-serif; color: darkgray; }
+#article_text { font-family: Arial, sans-serif; color: darkgray; width: 90vw; max-width:960px; }
 #article_links { font-family: "Courier New", monospace; color: darkgray; }
 
 .footers { font-family: Arial, sans-serif; color: dimgray;  }
@@ -18,9 +18,17 @@ a:active { color: lightgray; text-decoration: none; }
     background-color: dimgray;
     margin-top: 15px;
     height: 1px;
+    width: 90vw;
+    max-width: 960px;
 }
 
-.visualContent {
-	width:100%;
-	max-width: 640px;
+.video169 {
+    width: 80vw;
+    height: 45vw;
+    max-width: 640px;
+    max-height: 360px;
+}
+
+.imageClass {
+	max-width: 90vw;
 }
