--- a/style.css
+++ b/style.css
@@ -8,14 +8,14 @@ h1, h2, h3, h4, h5, h6 {
   max-width: 640px;
   margin: auto;
   padding-top: 20px;
-  padding-bottom: 5px;
+  padding-bottom: 0px;
   padding-left: 20px;
   padding-right: 20px;
   color: #000000;
+  font-family: 'Slabo 27px', serif;
 }
 
 .nav-container {
-  /*background-color: lightgray;*/
   font-size: 18px;
   overflow: auto; /* wrap children */
   line-height: 1.5
@@ -41,6 +41,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .content-container {
   /*background-color: green;*/
+  font-size: 16px;
   line-height: 1;
 }
 
@@ -62,6 +63,18 @@ h1, h2, h3, h4, h5, h6 {
 
 .bloglink-container a:hover,
 .bloglink-container a:active {
+  color: #000000;
+  text-decoration: none;
+}
+
+.projectlink-container a:link,
+.projectlink-container a:visited {
+  color: #000000;
+  text-decoration: none;
+}
+
+.projectlink-container a:hover,
+.projectlink-container a:active {
   color: #000000;
   text-decoration: none;
 }
