--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h1, h2, h3, h4, h5, h6 {
 .left-nav { float: left; }
 .right-nav { float: right }
 
-@media (max-width: 340px) {
+@media (max-width: 400px) {
   .left-nav {
     float: none; /* erase float */
     display: block;
@@ -41,8 +41,8 @@ h1, h2, h3, h4, h5, h6 {
 
 .content-container {
   /*background-color: green;*/
-  font-size: 16px;
-  line-height: 1;
+  font-size: 18px;
+  line-height: 1.5;
 }
 
 .content-container a:link,
@@ -77,4 +77,23 @@ h1, h2, h3, h4, h5, h6 {
 .projectlink-container a:active {
   color: #000000;
   text-decoration: none;
+}
+
+.body-img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+  height: auto;
+}
+
+.preview-img {
+  display: block;
+  max-width: 50%;
+  min-width: 160px;
+  height: auto;
+}
+
+.body-caption {
+  text-align: center;
 }
