--- a/style.css
+++ b/style.css
@@ -1,24 +1,49 @@
 h1, h2, h3, h4, h5, h6 {
   color: #303030;
   font-weight: 300;
+  margin: 0;
+  padding-top: 0px;
+  padding-bottom: 15px;
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+p {
+  margin: 0;
+  padding: 0;
 }
 
 .site-container {
   background-color: white;
   max-width: 640px;
-  margin: auto;
-  padding-top: 20px;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 50px;
   padding-bottom: 0px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 0px;
+  padding-right: 0px;
   color: #000000;
   font-family: 'Slabo 27px', serif;
+  font-size: 18px;
 }
 
 .nav-container {
+  background-color: white;
+  max-width: 640px;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 20px;
+  padding-bottom: 0px;
+  padding-left: 0px;
+  padding-right: 0px;
+  color: #000000;
+  font-family: 'Slabo 27px', serif;
   font-size: 18px;
   overflow: auto; /* wrap children */
-  line-height: 1.5
 }
 
 .nav-container a {
@@ -41,8 +66,11 @@ h1, h2, h3, h4, h5, h6 {
 
 .content-container {
   /*background-color: green;*/
-  font-size: 18px;
   line-height: 1.5;
+}
+
+.content-container p {
+  padding-bottom: 15px;
 }
 
 .content-container a:link,
@@ -55,45 +83,43 @@ h1, h2, h3, h4, h5, h6 {
   color: #2050b0;
 }
 
-.bloglink-container a:link,
-.bloglink-container a:visited {
+.postlink-p {
+  padding-bottom: 15px;
+}
+
+.postlink-p a:link,
+.postlink-p a:visited {
   color: #000000;
   text-decoration: none;
 }
 
-.bloglink-container a:hover,
-.bloglink-container a:active {
+.postlink-p a:hover,
+.postlink-p a:active {
   color: #000000;
   text-decoration: none;
 }
 
-.projectlink-container a:link,
-.projectlink-container a:visited {
-  color: #000000;
-  text-decoration: none;
-}
-
-.projectlink-container a:hover,
-.projectlink-container a:active {
-  color: #000000;
-  text-decoration: none;
-}
-
-.body-img {
+.body-img-p {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 100%;
+  text-align: center;
+}
+
+.body-img-p img {
+  max-width: 95%;
   height: auto;
 }
 
-.preview-img {
+.body-caption-p {
   display: block;
+  text-align: center;
+}
+
+.preview-img-p {
+  display: block;
+}
+
+.preview-img-p img {
   max-width: 50%;
   min-width: 160px;
   height: auto;
-}
-
-.body-caption {
-  text-align: center;
 }
