--- a/style.css
+++ b/style.css
@@ -1,49 +1,19 @@
 h1, h2, h3, h4, h5, h6 {
-  color: #303030;
   font-weight: 300;
-  margin: 0;
-  padding-top: 0px;
-  padding-bottom: 15px;
-  padding-left: 0px;
-  padding-right: 0px;
 }
 
-p {
-  margin: 0;
-  padding: 0;
-}
-
-.site-container {
-  background-color: white;
-  max-width: 640px;
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 50px;
-  padding-bottom: 0px;
-  padding-left: 0px;
-  padding-right: 0px;
-  color: #000000;
-  font-family: 'Slabo 27px', serif;
-  font-size: 18px;
+div {
+    padding-top: 20px;
 }
 
 .nav-container {
   background-color: white;
   max-width: 640px;
-  margin-top: 0;
-  margin-bottom: 0;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 20px;
-  padding-bottom: 0px;
-  padding-left: 0px;
-  padding-right: 0px;
-  color: #000000;
-  font-family: 'Slabo 27px', serif;
+  color: black;
+  font-family: serif;
   font-size: 18px;
-  overflow: auto; /* wrap children */
 }
 
 .nav-container a {
@@ -51,75 +21,46 @@ p {
   text-decoration: none;
 }
 
-.left-nav { float: left; }
-.right-nav { float: right }
+.list-container {
+  background-color: white;
+  max-width: 640px;
+  margin-left: auto;
+  margin-right: auto;
+  color: black;
+  font-family: serif;
+  font-size: 18px;
+}
 
-@media (max-width: 400px) {
-  .left-nav {
-    float: none; /* erase float */
-    display: block;
-  }
-  .right-nav {
-    float: left
-  }
+.list-container a {
+  color: #000000;
+  text-decoration: none;
 }
 
 .content-container {
-  /*background-color: green;*/
+  background-color: white;
+  max-width: 640px;
+  margin-left: auto;
+  margin-right: auto;
+  color: black;
+  font-family: serif;
+  font-size: 18px;
   line-height: 1.5;
 }
 
-.content-container p {
-  padding-bottom: 15px;
+.content-container a {
+  color: #1060a0;
 }
 
-.content-container a:link,
-.content-container a:visited {
-  color: #103080;
-}
-
-.content-container a:hover,
-.content-container a:active {
-  color: #2050b0;
-}
-
-.postlink-p {
-  padding-bottom: 15px;
-}
-
-.postlink-p a:link,
-.postlink-p a:visited {
-  color: #000000;
-  text-decoration: none;
-}
-
-.postlink-p a:hover,
-.postlink-p a:active {
-  color: #000000;
-  text-decoration: none;
-}
-
-.body-img-p {
+.body-img {
   display: block;
   text-align: center;
 }
 
-.body-img-p img {
-  max-width: 95%;
+.body-img img {
+  display: block;
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
   height: auto;
 }
 
-.body-caption-p {
-  display: block;
-  text-align: center;
-}
-
-.preview-img-p {
-  display: block;
-}
-
-.preview-img-p img {
-  max-width: 50%;
-  min-width: 160px;
-  height: auto;
-}
