smaller font size for mobile

--- a/style.css
+++ b/style.css
@@ -24,24 +24,6 @@ div {
     padding-top: 20px;
 }
 
-ita { font-style: italic; }
-
-auth {
-  text-align: right;
-  display: block;
-}
-
-bibl {
-  font-size: 14px;
-  display: block;
-}
-
-ln {
-  display: block;
-  text-align: center;
-  font-size: 14px;
-}
-
 .nav-container {
   background-color: white;
   max-width: 640px;
@@ -102,3 +84,18 @@ ln {
   height: auto;
 }
 
+@media (max-width: 640px)
+{
+  .nav-container
+  {
+    font-size: 12px;
+  }
+  .list-container
+  {
+    font-size: 12px;
+  }
+  .content-container
+  {
+    font-size: 12px;
+  }
+}
