--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
   margin-right: auto;
   margin-bottom: 150px;
   color: #404040;
-  font-family: serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 14px;
   line-height: 1.5;
 }
