--- a/style.css
+++ b/style.css
@@ -32,12 +32,12 @@ body img {
   display: block;
   max-width: 38em; /* 0.76 of 50 */
   margin: 0 auto;
-  padding: 1.2em 0;
+  padding: 0.5em 0;
 }
 
 .imgcaption {
-  max-width: 40vw;
-  margin: -1.2em auto 1.2em auto; /* negate img's 1em padding bottom*/
+  max-width: 60vw;
+  margin: -0.5em auto 0.5em auto; /* relay img's 1.2em padding bottom*/
   font-size: small;
   text-align: center;
 }
@@ -71,7 +71,7 @@ nav a {
 
 .list-title {
   margin-right: 1em;
-  margin-bottom: -1.5em; /* negate img's 1em padding top */
+  margin-bottom: -0.8em; /* negate img's 1.2em padding top */
   padding-top: 0.5em; /* move away from elem above */
 }
 
