--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-weight: 300;
+  font-weight: normal;
 }
 
 body {
@@ -16,7 +16,7 @@ body {
   color: #303030;
   font: 1em sans-serif;
   line-height: 1.5;
-  font-weight: 300;
+  font-weight: normal;
 
   margin: 2em auto;
   padding: 0 1em; /* +1em left and right makes 40 */
