--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-weight: normal;
+  font-weight: lighter;
 }
 
 body {
@@ -15,8 +15,8 @@ body {
 
   color: #303030;
   font: 1em sans-serif;
-  line-height: 1.5;
-  font-weight: normal;
+  line-height: 1.8;
+  font-weight: lighter;
 
   margin: 2em auto;
   padding: 0 0 10em 0;
