--- a/style.css
+++ b/style.css
@@ -11,33 +11,33 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 body {
-  max-width: 45em; /* 0.9 of 50 */
+  max-width: 45rem; /* 0.9 of 50 */
 
   color: #303030;
-  font: 1em sans-serif;
+  font: small sans-serif;
   font-weight: lighter;
   line-height: 1.8;
 
-  margin: 2em auto;
-  padding: 0 0 10em 0;
+  margin: 2rem auto;
+  padding: 0 0 10rem 0;
 }
 
 body img {
   display: block;
-  max-width: 40em; /* 0.8 of 50 */
+  max-width: 40rem; /* 0.8 of 50 */
   margin: 0 auto;
-  padding: 0.5em 0;
+  padding: 0.5rem 0;
 }
 
 .imgcaption {
-  max-width: 35em; /* 0.7 of 50 */
-  margin: -0.5em auto 0.5em auto; /* relay img's 0.5em padding bottom*/
-  font-size: small;
+  max-width: 35rem; /* 0.7 of 50 */
+  margin: -0.5rem auto 0.5rem auto; /* relay img's 0.5rem padding bottom*/
+  font-size: x-small;
   text-align: center;
   line-height: 1.5;
 }
 
-@media screen and (max-width: 50em) {
+@media screen and (max-width: 50rem) {
     body {
         max-width: 90vw
     }
@@ -72,6 +72,7 @@ body img {
 nav a {
   color: #303030;
   text-decoration: none;
+  font-size: medium;
 }
 
 .list-container {
@@ -84,9 +85,9 @@ nav a {
 }
 
 .list-title {
-  margin-right: 2.5em;
-  margin-bottom: -0.8em; /* negate img's 1.2em padding top */
-  padding-top: 0.5em; /* move away from elem above */
+  margin-right: 2.5rem;
+  margin-bottom: -0.8rem; /* negate img's 1.2em padding top */
+  padding-top: 0.5rem; /* move away from elem above */
 }
 
 .content-container a {
@@ -94,11 +95,11 @@ nav a {
 }
 
 .page_nav {
-    padding-top: 2em;
+    padding-top: 2rem;
     text-align: center;
 }
 
-@media screen and (max-width: 50em) {
+@media screen and (max-width: 50rem) {
     .list-title {
         margin-right: 5vw;
     }
