--- a/style.css
+++ b/style.css
@@ -7,15 +7,17 @@ html {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-weight: lighter;
+  /* font-weight: lighter; */
+  font-weight: normal;
 }
 
 body {
   max-width: 45rem; /* 0.9 of 50 */
 
   color: #303030;
-  font: small sans-serif;
-  font-weight: lighter;
+  font: medium sans-serif;
+  /* font-weight: lighter; */
+  font-weight: normal;
   line-height: 1.8;
 
   margin: 2rem auto;
@@ -32,7 +34,7 @@ body img {
 .imgcaption {
   max-width: 35rem; /* 0.7 of 50 */
   margin: -0.5rem auto 0.5rem auto; /* relay img's 0.5rem padding bottom*/
-  font-size: x-small;
+  font-size: small;
   text-align: center;
   line-height: 1.5;
 }
@@ -85,6 +87,7 @@ nav a {
 }
 
 .list-title {
+    font-size: small;
   margin-right: 2.5rem;
   margin-bottom: -0.8rem; /* negate img's 1.2em padding top */
   padding-top: 0.5rem; /* move away from elem above */
