--- a/style.css
+++ b/style.css
@@ -7,16 +7,15 @@ html {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  /* font-weight: lighter; */
   font-weight: normal;
+  font-family: sans-serif;
 }
 
 body {
   max-width: 45rem; /* 0.9 of 50 */
 
   color: #303030;
-  font: medium sans-serif;
-  /* font-weight: lighter; */
+  font: medium serif;
   font-weight: normal;
   line-height: 1.8;
 
@@ -35,8 +34,10 @@ body img {
   max-width: 35rem; /* 0.7 of 50 */
   margin: -0.5rem auto 0.5rem auto; /* relay img's 0.5rem padding bottom*/
   font-size: small;
+    font-family: sans-serif;
   text-align: center;
   line-height: 1.5;
+   font-weight: lighter;
 }
 
 @media screen and (max-width: 50rem) {
@@ -74,7 +75,9 @@ body img {
 nav a {
   color: #303030;
   text-decoration: none;
+    font-family: sans-serif;
   font-size: medium;
+   font-weight: lighter;
 }
 
 .list-container {
@@ -88,6 +91,8 @@ nav a {
 
 .list-title {
     font-size: small;
+    font-family: sans-serif;
+   font-weight: lighter;
   margin-right: 2.5rem;
   margin-bottom: -0.8rem; /* negate img's 1.2em padding top */
   padding-top: 0.5rem; /* move away from elem above */
