--- a/style.css
+++ b/style.css
@@ -1,29 +1,36 @@
 html {
-    /* scrollbar hack #1 */
-    margin-left: calc(100vw - 100%);
-    margin-right: 0;
+  /* scrollbar hack #1 */
+  margin-left: calc(100vw - 100%);
+  margin-right: 0;
 
-    background-color: #F5F5F5;
+  background-color: #F0F0F0;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-weight: normal;
-  font-family: sans-serif;
-}
 
 body {
   max-width: 45rem; /* 0.9 of 50 */
-
   color: #303030;
-  font: medium serif;
-  font-weight: normal;
-  line-height: 1.8;
-
+  font: normal medium sans-serif;
   margin: 2rem auto;
   padding: 0 0 10rem 0;
 }
 
-body img {
+h1, h2, h3, h4, h5, h6 {
+  font-weight: normal;
+  line-height: 2.0;
+}
+
+p {
+  line-height: 1.8;
+  font-weight: lighter;
+}
+
+p a {
+  background-color: #E0E0E0;
+  color: #1060a0;
+}
+
+img {
   display: block;
   max-width: 40rem; /* 0.8 of 50 */
   margin: 0 auto;
@@ -32,56 +39,62 @@ body img {
 
 .imgcaption {
   max-width: 35rem; /* 0.7 of 50 */
-  margin: -0.5rem auto 0.5rem auto; /* relay img's 0.5rem padding bottom*/
+  margin: -0.3rem auto 0.5rem auto; /* relay img's 0.5rem padding bottom*/
   font-size: small;
-    font-family: sans-serif;
   text-align: center;
-  line-height: 1.5;
-   font-weight: lighter;
+  line-height: 1.2;
+  font-weight: normal;
 }
 
 @media screen and (max-width: 50rem) {
-    body {
-        max-width: 90vw
-    }
-    body img {
-        max-width: 80vw;
-        margin: 0 auto;
-    }
-    .imgcaption {
-      max-width: 70vw;
-    }
+  body {
+    max-width: 90vw
+  }
+  img {
+    max-width: 80vw;
+    margin: 0 auto;
+  }
+  .imgcaption {
+    max-width: 70vw;
+  }
 }
 
 @media print{
-    html {
-        margin: 0;
-    }
-    body {
-        max-width: 90%;
-        margin: 2em auto;
-    }
-    body img {
-        max-width: 60%;
-        margin: 0 auto;
-    }
-    .imgcaption {
-      max-width: 50%;
-    }
+  html {
+    margin: 0;
+  }
+  body {
+    max-width: 90%;
+    margin: 2em auto;
+  }
+  img {
+    max-width: 60%;
+    margin: 0 auto;
+  }
+  .imgcaption {
+    max-width: 50%;
+  }
 }
 
 /* site specific visual style */
 
+nav {
+  color: #303030;
+  font-size: medium;
+  font-weight: lighter;
+  margin-bottom: 2.0rem;
+}
+
 nav a {
   color: #303030;
-  text-decoration: none;
-    font-family: sans-serif;
-  font-size: medium;
-   font-weight: lighter;
+  text-decoration: underline;
+  background-color: #E0E0E0;
+  padding: 0.2rem 0.5rem;
+  margin: 0.2rem 0.5rem;
 }
 
 .list-container {
-    text-align: right;
+  text-align: right;
 }
 
 .list-container a {
@@ -90,25 +103,25 @@ nav a {
 }
 
 .list-title {
-    font-size: small;
-    font-family: sans-serif;
-   font-weight: lighter;
+  font-size: medium;
+  font-weight: lighter;
   margin-right: 2.5rem;
-  margin-bottom: -0.8rem; /* negate img's 1.2em padding top */
+  margin-bottom: -0.5rem;
   padding-top: 0.5rem; /* move away from elem above */
 }
 
-.content-container a {
-  color: #1060a0;
+.page_nav {
+  color: #AAAAAA;
+  padding-top: 2rem;
+  text-align: center;
 }
 
-.page_nav {
-    padding-top: 2rem;
-    text-align: center;
+.page_nav a {
+  color: #303030;
 }
 
 @media screen and (max-width: 50rem) {
-    .list-title {
-        margin-right: 5vw;
-    }
+  .list-title {
+    margin-right: 5vw;
+  }
 }
