--- a/style.css
+++ b/style.css
@@ -97,17 +97,26 @@ nav a {
   text-align: right;
 }
 
-.list-container a {
+.list-title {
   color: #303030;
   text-decoration: none;
-}
 
-.list-title {
   font-size: medium;
   font-weight: lighter;
-  margin-right: 2.5rem;
-  margin-bottom: -0.5rem;
-  padding-top: 0.5rem; /* move away from elem above */
+  /* margin-right: 2.5rem; */
+  /* margin-bottom: -0.5rem; */
+  /* move away from elem above */
+  /* padding-top: 0.5rem; */
+
+  text-decoration: underline;
+  background-color: #E0E0E0;
+
+  display: inline;
+  padding: 0.2rem 0.8rem;
+  margin-right: 3.0rem;
+  position: relative;
+  bottom: 2.5rem;
+  border: thin solid black;
 }
 
 .page_nav {
@@ -118,6 +127,10 @@ nav a {
 
 .page_nav a {
   color: #303030;
+  text-decoration: underline;
+  background-color: #E0E0E0;
+  padding: 0.2rem 0.2rem;
+  margin: 0.2rem 0.2rem;
 }
 
 @media screen and (max-width: 50rem) {
