--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html {
   margin-left: calc(100vw - 100%);
   margin-right: 0;
 
-  background-color: #F0F0F0;
+  background-color: #F0F0EA;
 }
 
 
@@ -16,18 +16,21 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-weight: normal;
-  line-height: 2.0;
+  line-height: 1.0;
 }
 
 p {
-  line-height: 1.8;
-  font-weight: lighter;
+  line-height: 1.5;
 }
 
 p a {
   background-color: #E0E0E0;
   color: #1060a0;
+}
+
+li {
+  line-height: 1.2;
+  padding-bottom: 0.5rem;
 }
 
 img {
@@ -81,7 +84,6 @@ img {
 nav {
   color: #303030;
   font-size: medium;
-  font-weight: lighter;
   margin-bottom: 2.0rem;
 }
 
@@ -90,7 +92,7 @@ nav a {
   text-decoration: underline;
   background-color: #E0E0E0;
   padding: 0.2rem 0.5rem;
-  margin: 0.2rem 0.5rem;
+  margin: 0.2rem 0.2rem;
 }
 
 .list-container {
@@ -102,12 +104,6 @@ nav a {
   text-decoration: none;
 
   font-size: small;
-  font-weight: normal;
-  /* margin-right: 2.5rem; */
-  /* margin-bottom: -0.5rem; */
-  /* move away from elem above */
-  /* padding-top: 0.5rem; */
-
   text-decoration: underline;
   background-color: #E0E0E0;
 
