change link bacground color

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
   margin-left: calc(100vw - 100%);
   margin-right: 0;
-  background-color: #F0F0EA;
+  background-color: #F0F0F0;
 }
 
 body {
@@ -20,14 +20,13 @@ p {
   line-height: 1.5;
 }
 
-p a {
-  background-color: #E0E0E0;
-  color: #1060a0;
-}
-
 li {
   line-height: 1.2;
   padding-bottom: 0.5rem;
+}
+
+a {
+  color: #1060a0;
 }
 
 img {
