--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 html {
   margin-left: calc(100vw - 100%);
   margin-right: 0;
@@ -19,17 +24,24 @@ body {
 h1, h2, h3, h4, h5, h6 {
   line-height: 1.0;
   font-weight: normal;
+  margin-bottom: 2rem;
 }
 
 p {
-      /* font includes line-height so if put after line-height it will shadow existing value */
-    font-size: medium;
-    font-weight: normal;
-    line-height: 1.6;
+  /* font includes line-height so if put after line-height it will shadow existing value */
+  font-size: medium;
+  font-weight: normal;
+  line-height: 1.6;
+  margin-bottom: 1rem;
+}
+
+ul {
+  margin-bottom: 1rem;
 }
 
 li {
   line-height: 1.4;
+  margin-left: 2rem;
   padding-bottom: 0.4rem;
   font-size: small;
 }
