--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-
 * {
   margin: 0;
   padding: 0;
@@ -8,30 +6,36 @@
 html {
   margin-left: calc(100vw - 100%);
   margin-right: 0;
-  background-color: #F5F5F5;
+  background-color: #F8F8F8;
 }
 
+nav {
+  font-size: small;
+  margin-bottom: 2.0rem;
+}
+
+nav a {
+    margin-right: 1.0rem;
+}
+
+/* NOTE: font includes line-height so if put after line-height it will shadow existing value */
 body {
-    max-width: 45rem; /* 0.9 of 50 */
-    color: #303030;
-    font-size: medium;
-    font-weight: normal;
-    font-family: 'Noto Sans', sans-serif;
-    margin: 2rem auto;
-    padding: 0 0 2rem 0;
+  max-width: 45rem; /* 0.9 of 50 */
+  color: #101010;
+  font-size: medium;
+  font-weight: normal;
+  font-family: sans-serif;
+  margin: 2rem auto;
+  padding: 0 0 2rem 0;
+  line-height: 1.6;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  line-height: 1.0;
   font-weight: normal;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 p {
-  /* font includes line-height so if put after line-height it will shadow existing value */
-  font-size: medium;
-  font-weight: normal;
-  line-height: 1.6;
   margin-bottom: 1rem;
 }
 
@@ -40,59 +44,71 @@ ul {
 }
 
 li {
-  line-height: 1.4;
-  margin-left: 2rem;
-  padding-bottom: 0.4rem;
-  font-size: small;
+  margin-left: 3rem;
+  padding-bottom: 0.2rem;
 }
 
 a {
-  color: #1060a0;
+  color: #1050a0;
 }
 
 img {
   display: block;
   max-width: 40rem; /* 0.8 of 50 */
+  max-height: 30rem; /* 0.8 of 50 */
   margin: 0 auto;
   padding: 0.5rem 0;
 }
 
-.imgcaption {
-  max-width: 35rem; /* 0.7 of 50 */
-  margin: -0.3rem auto 0.5rem auto; /* relay img's 0.5rem padding bottom*/
+/*  For img caption, em following right after img
+    ex)
+        ![img description text](img/img.jpg)
+        *img caption text*
+*/
+img + em {
+  display: block;
   font-size: small;
+  font-family: sans-serif;
   text-align: center;
   line-height: 1.2;
-  font-weight: normal;
+  padding: 0 3rem;
 }
 
 code {
-    font-size: 0.8rem;
+    font-size: medium;
     font-family: monospace;
-    color: #202020;
-    background-color: #E0E0E0;
+    color: #000000;
+    background-color: #F0F0F0;
     padding: 0.2rem 0.5rem;
 }
 
-
+/* Markdown also converts to pre code */
 pre code {
-    display: block;
-    font-size: 0.5rem;
-    line-height: 2.0;
-    padding: 1.0rem;
-    overflow-x: scroll;
-    white-space: pre;
+  display: block;
+  padding: 1.0rem;
+  white-space: pre-wrap;
+  margin-bottom: 1rem;
 }
 
-.note {
-  font-family: monospace;
-  color: #202020;
-  background-color: #F0E080;
-  padding: 1rem;
+blockquote {
+  overflow-wrap: break-word;
+  display: block;
+  padding: 0rem 1.0rem;
+  margin-bottom: 1rem;
+  margin-left: 2rem;
+  margin-right: 1rem;
+  border-left: thick solid #CCCCCC;
+  font-family: serif;
 }
 
-select {
-  font-size: large;
+blockquote p {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+hr {
+    margin-top: 1rem;
+    margin-bottom: 1rem
 }
 
 @media screen and (max-width: 50rem) {
@@ -101,10 +117,6 @@ select {
   }
   img {
     max-width: 80vw;
-    margin: 0 auto;
-  }
-  .imgcaption {
-    max-width: 70vw;
   }
 }
 
@@ -114,17 +126,8 @@ select {
   }
   body {
     max-width: 90%;
-    margin: 2em auto;
   }
   img {
     max-width: 60%;
-    margin: 0 auto;
-  }
-  .imgcaption {
-    max-width: 50%;
-  }
-  pre code {
-    overflow-x: hidden;
-    white-space: pre-wrap;
   }
 }
