--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
   margin: 2rem auto;
   padding: 0 0 2rem 0;
   line-height: 1.6;
+  word-break: break-word;
 }
 
 h1, h2, h3, h4, h5, h6 {
